fixed tag builder